set margins on sidebox and page to prevent overlap

--- a/src/containers/PasswordUpdate/PasswordUpdate.scss
+++ b/src/containers/PasswordUpdate/PasswordUpdate.scss
@@ -1,6 +1,14 @@
 .password-update {
   padding: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  form {
+    width: 100%;
+  }
+  
   .input-div {
     margin: 20px;
     width: 100%;
