--- a/src/containers/SideBox/SideBox.scss
+++ b/src/containers/SideBox/SideBox.scss
@@ -2,6 +2,7 @@
   position: fixed;
   z-index: 1;
   top: 100px;
+  min-width: 200px;
   left: 0;
   // width:
   // width: 200px;
